--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^6.1.0",
     "next": "^14.2.12",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "run": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
