--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "@mui/material-nextjs": "^6.1.1",
-    "next": "^14.2.12",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.1.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-frame-component": "^5.2.7",
     "run": "^1.5.0"
   },
   "devDependencies": {
